[package]
name = "peach_metrics"
edition = "2024"
version = "0.2.1"
authors.workspace = true
description = "Low level CPU and OS timing functions for instrumention-based profiling."
license.workspace = true
repository = "https://github.com/Austionian/peach_profiler"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["no_std"]

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_System_Performance"] }

[lints]
workspace = true
