[package]
name = "peach_pit"
edition = "2024"
version = "0.1.3"
description = "Peach Profiler's core, but peaches don't have cores, they have pits."
authors.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
peach_metrics = { version = "0.1.2", path = "../peach_metrics" }

[lib]
proc-macro = true

### FEATURES #################################################################

[features]
default = []

# Enables the profiler. Running a program without the profile feature disables 
# the profiler and will not affect the program's execution.
profile = []
