[package]
name = "peach_pit"
edition = "2024"
version = "0.1.8"
description = "Peach Profiler's core, but peaches don't have cores, they have pits."
authors.workspace = true
license.workspace = true
repository = "https://github.com/Austionian/peach_profiler"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true

# Make sure to create the documentation with the profiler enabled.
[package.metadata.docs.rs]
features = ["profile"]

### FEATURES #################################################################

[features]
default = []

# Enables the profiler. Running a program without the profile feature disables 
# the profiler and will not affect the program's execution.
profile = []

# Enable debugging profiling instrumentation. Could help notify hash collisions
# or add/sub overflows.
debug = []

# Enable std library imports.
std = []
