[package]
name = "peach_profiler"
edition = "2024"
version = "0.1.14"
authors.workspace = true
description.workspace = true
license.workspace = true
readme = "../crates-io.md"
repository = "https://github.com/Austionian/peach_profiler"
categories = [
  "development-tools::profiling",
  "development-tools",
  "no-std",
  "no-std::no-alloc",
]
keywords = ["profiler", "no_std"]

[dependencies]
peach_metrics = { version = "0.2.2", path = "../peach_metrics" }
peach_pit = { version = "0.1.8", path = "../peach_pit" }

[target.'cfg(not(features = "std"))'.dependencies]
libc-print = { version = "0.1.23" }

[lints]
workspace = true

# Make sure to create the documentation with the profiler enabled.
[package.metadata.docs.rs]
features = ["profile"]

### FEATURES #################################################################

[features]
default = ["std"]

# Enables the profiler. Running a program without the profile feature disables 
# the profiler and will not affect the program's execution.
profile = ["peach_pit/profile"]

# Enable debugging profiling instrumentation. Can help surface hash collisions
# and/or add/sub overflows.
debug = ["peach_pit/debug"]

# Run the profiler in a std environment.
std = ["peach_pit/std"]
